# Unboxd

./: .gitignore  Caddyfile  DEVELOPMENT.md  README.md  Trending_Movies.csv  Trending_Movies.csv.xlsx  docker-compose.yml  movieswreviews.py  presentation_link.txt  scrape-reviews.py  sent.py
backend/: .dockerignore  Dockerfile  Trending_Movies.csv.xlsx  cosine_similarity.py  dummy_data.py  main.py  models.py  pyproject.toml  recommender.py  requirements.txt  scrape_reviews.py  sent.py  sentiment.py  test_main.http
backend/data/: .gitattributes  merged_trending_movies.csv  trending_movie_trailers.csv
backend/data/merged_reviews/: ericmli.csv
backend/data/preprocessed_movies/: split_58.csv
backend/data/processed_reviews/: schaffrillas_sentiment.csv
backend/data/reviews/: ericmli.csv  maorimovies.csv
backend/data/sentiment_reviews/: ericmli.csv
backend/helpers/: db.py  dummy_data.py  init_dataset.py  initialize_datasets.py  merge_ratings.py  models.py  movieswreviews.py  paths.py  preprocess_features.py  preprocessed_movie_model.py  recommender.py  reduce_features.py  retrieve_preprocessed.py  scrape_letterboxd.py  scrape_reviews.py  scrape_trailer_ids.py  sentiment.py  split_csv.py  test.py  utils.py
backend/processed_reviews/: ericmli.csv
backend/reviews/: deathproof.csv  ericZ.csv  ericmli.csv  schaffrillas.csv  scrape_reviews.py.csv
backend/tests/: test_recommendation_system.py
frontend/: .dockerignore  .gitignore  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json
merged_reviews/: deathproof_sentiment_merged.csv  (+1 more)
(+304 files in other folders)
